
package org.example.domain.port;

public interface PasswordEncoderPort {
    String encode(String rawPassword);
}
